compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__module_private_type_leak_6.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 821
expression: "type PrivateType\npub record LeakType { Variant(PrivateType) }"
---
error: Private type used in public interface
  ┌─ /src/one/two.rakun:2:23
  │
2 │ pub record LeakType { Variant(PrivateType) }
  │                       ^^^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.
